--- a/analysis/simulation_no_enrichment.Rmd
+++ b/analysis/simulation_no_enrichment.Rmd
@@ -81,7 +81,7 @@ plot_enrichment_z <- function(results_dir,runtag,thins,group_prior_var_structure
       y2 <- param_df_susie$`enrichment_Liver|expression`/param_df_susie$`enrichment_se_Liver|expression`
       truth <- rbind(c(1,true_value_gene),c(2,true_value_gene))
       est <- rbind(cbind(1,y1),cbind(2,y2))
-      plot_par_2(truth,est,xlabels = c("Liver (ctwas)", "Liver (susie)"),ylim=c(min(est[,2],truth[,2]),max(est[,2],truth[,2])),ylab="PVE", main=group_prior_var_structure)
+      plot_par_2(truth,est,xlabels = c("Liver (ctwas)", "Liver (susie)"),ylim=c(min(est[,2],truth[,2]),max(est[,2],truth[,2])),ylab="Enrichment Zscore", main=group_prior_var_structure)
     }
   }
 }
