--- a/analysis/simulation_no_enrichment.Rmd
+++ b/analysis/simulation_no_enrichment.Rmd
@@ -160,7 +160,7 @@ plot_pve(results_dir,runtag,thins,group_prior_var_structures,null_methods,true_v
 
 ### Enrichment
 ```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 1
+true_value_gene <- 0
 plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,true_value_gene)
 ```
 
@@ -204,7 +204,7 @@ plot_pve(results_dir,runtag,thins,group_prior_var_structures,null_methods,true_v
 
 ### Enrichment
 ```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 1
+true_value_gene <- 0
 plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,true_value_gene)
 ```
 
@@ -248,7 +248,7 @@ plot_pve(results_dir,runtag,thins,group_prior_var_structures,null_methods,true_v
 
 ### Enrichment
 ```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 1
+true_value_gene <- 0
 plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,true_value_gene)
 ```
 
@@ -292,8 +292,14 @@ plot_pve(results_dir,runtag,thins,group_prior_var_structures,null_methods,true_v
 
 ### Enrichment
 ```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 1
+true_value_gene <- 0
 plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,true_value_gene)
+```
+
+### Enrichment Zscore
+```{r,echo=FALSE,fig.width= 8, fig.height= 4}
+true_value_gene <- 0
+plot_enrichment_z(results_dir,runtag,thins,group_prior_var_structures,null_methods,true_value_gene)
 ```
 
 ## Enrichment=1 (gene variance=40, snp variance=10)
@@ -336,7 +342,7 @@ plot_pve(results_dir,runtag,thins,group_prior_var_structures,null_methods,true_v
 
 ### Enrichment
 ```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 1
+true_value_gene <- 0
 plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,true_value_gene)
 ```
 
@@ -380,7 +386,7 @@ plot_pve(results_dir,runtag,thins,group_prior_var_structures,null_methods,true_v
 
 ### Enrichment
 ```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 1
+true_value_gene <- 0
 plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,true_value_gene)
 ```
 
