--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -14,7 +14,7 @@ editor_options:
   
   [6 modality weights from Munro et al.](https://sq-96.github.io/multigroup_ctwas_analysis/data_6modality_Munro.html)
 
-### Deciding weights  
+## Deciding weights  
   
   Comparing results from Munro weights & predictdb weights
   
@@ -33,6 +33,7 @@ editor_options:
   * [Simulation no enrichment](simulation_no_enrichment.html)
   * [Simulation pip calibration](simulation_pip_calibration.html)
   
+
 # Real data application
 
 ## Omics
@@ -108,7 +109,7 @@ Package V2.0
 * [coloc results](real_data_coloc.html)
 
 
-# Post - processing
+## Post - processing
 
 ### LD mismatch diagnosis
 
@@ -121,11 +122,21 @@ Package V2.0
 
   * Test region merge [link](https://sq-96.github.io/multigroup_ctwas_analysis/region_merge_test.html)
 
-# Downstream analysis
+
+
+## Downstream analysis
   
   * [20 traits](multi_group_downstream_analysis.html)
   
-# LDL examples
+  
+## Comparing different settings in multi-group analysis
+
+* [Comparing ctwas running setting](https://sq-96.github.io/multigroup_ctwas_analysis/comparing_differnt_settings.html)
+* [Comparing ld-mismatch setting](https://sq-96.github.io/multigroup_ctwas_analysis/comparing_differnt_settings_ldmm.html)
+
+  
+  
+## LDL examples
 
 package v2.0
 
