--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -13,6 +13,8 @@ editor_options:
   [GWAS, LD, expr_weights](https://sq-96.github.io/multigroup_ctwas_analysis/data.html)
   
   [6 modality weights from Munro et al.](https://sq-96.github.io/multigroup_ctwas_analysis/data_6modality_Munro.html)
+  
+  [Training stability weights using munro's RNA data](https://sq-96.github.io/multigroup_ctwas_analysis/data_weight_training.html)
 
 ## Deciding weights  
   
