--- a/analysis/simulation_one_tissue_no_enrichment.Rmd
+++ b/analysis/simulation_one_tissue_no_enrichment.Rmd
@@ -61,7 +61,7 @@ plot_enrichment <- function(results_dir, runtag, thins, group_prior_var_structur
 ```
 
 
-## Enrichment=1 (sigma_gene = 0.0155)
+## Enrichment=1 (prior_gene = 0.0025, sigma_gene = 0.0155)
 gene prior = 2.5e-3, snp prior = 2.5e-3, sigma_gene = 0.0155, sigma_snp = 0.0155, 7395 genes and 500000 SNPs
 ```{r,echo=FALSE,fig.width= 8, fig.height= 4}
 results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue_test/"
@@ -72,13 +72,20 @@ group_prior_var_structures <- c("shared_all","shared_type")
 null_methods <- c("ctwas","susie")
 ```
 
+### All regions
 ```{r,echo=FALSE,fig.width= 8, fig.height= 4}
 true_value_gene <- 0
 file_name <- ".minp0.mingene0.parameters.RDS"
 plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
 ```
+### Regions with min_p_single=0.8
+```{r,echo=FALSE,fig.width= 8, fig.height= 4}
+true_value_gene <- 0
+file_name <- ".minp08.mingene1.parameters.RDS"
+plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
+```
 
-## Enrichment=1 (sigma_gene = 0.0185)
+## Enrichment=1 (prior_gene = 0.0025, sigma_gene = 0.0185)
 gene prior = 2.5e-3, snp prior = 2.5e-3, sigma_gene = 0.0185, sigma_snp = 0.0155, 7395 genes and 500000 SNPs
 ```{r,echo=FALSE,fig.width= 8, fig.height= 4}
 results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue_test/"
@@ -89,13 +96,21 @@ group_prior_var_structures <- c("shared_all","shared_type")
 null_methods <- c("ctwas","susie")
 ```
 
+### All regions
 ```{r,echo=FALSE,fig.width= 8, fig.height= 4}
 true_value_gene <- 0
 file_name <- ".minp0.mingene0.parameters.RDS"
 plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
 ```
 
-## Enrichment=1 (sigma_gene = 0.0200)
+### Regions with min_p_single=0.8
+```{r,echo=FALSE,fig.width= 8, fig.height= 4}
+true_value_gene <- 0
+file_name <- ".minp08.mingene1.parameters.RDS"
+plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
+```
+
+## Enrichment=1 (prior_gene = 0.0025, sigma_gene = 0.0200)
 gene prior = 2.5e-3, snp prior = 2.5e-3, sigma_gene = 0.0200, sigma_snp = 0.0155, 7395 genes and 500000 SNPs
 ```{r,echo=FALSE,fig.width= 8, fig.height= 4}
 results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue_test/"
@@ -106,13 +121,21 @@ group_prior_var_structures <- c("shared_all","shared_type")
 null_methods <- c("ctwas","susie")
 ```
 
+### All regions
 ```{r,echo=FALSE,fig.width= 8, fig.height= 4}
 true_value_gene <- 0
 file_name <- ".minp0.mingene0.parameters.RDS"
 plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
 ```
 
-## Enrichment=1 (sigma_gene = 0.0215)
+### Regions with min_p_single=0.8
+```{r,echo=FALSE,fig.width= 8, fig.height= 4}
+true_value_gene <- 0
+file_name <- ".minp08.mingene1.parameters.RDS"
+plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
+```
+
+## Enrichment=1 (prior_gene = 0.0025, sigma_gene = 0.0215)
 gene prior = 2.5e-3, snp prior = 2.5e-3, sigma_gene = 0.0215, sigma_snp = 0.0155, 7395 genes and 500000 SNPs
 ```{r,echo=FALSE,fig.width= 8, fig.height= 4}
 results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue_test/"
@@ -123,8 +146,116 @@ group_prior_var_structures <- c("shared_all","shared_type")
 null_methods <- c("ctwas","susie")
 ```
 
+### All regions
 ```{r,echo=FALSE,fig.width= 8, fig.height= 4}
 true_value_gene <- 0
 file_name <- ".minp0.mingene0.parameters.RDS"
+plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
+```
+
+### Regions with min_p_single=0.8
+```{r,echo=FALSE,fig.width= 8, fig.height= 4}
+true_value_gene <- 0
+file_name <- ".minp08.mingene1.parameters.RDS"
+plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
+```
+
+## Enrichment=1 (prior_gene = 0.0034, sigma_gene = 0.0155)
+gene prior = 3.4e-3, snp prior = 3.4e-3, sigma_gene = 0.0155, sigma_snp = 0.0155, 7395 genes and 500000 SNPs
+```{r,echo=FALSE,fig.width= 8, fig.height= 4}
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue_test/"
+runtag = "one_tissue"
+simutags <- paste(5, 1:10, sep = "-")
+thins <- c(1)
+group_prior_var_structures <- c("shared_all","shared_type")
+null_methods <- c("ctwas","susie")
+```
+
+### All regions
+```{r,echo=FALSE,fig.width= 8, fig.height= 4}
+true_value_gene <- 0
+file_name <- ".minp0.mingene0.parameters.RDS"
+plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
+```
+
+### Regions with min_p_single=0.8
+```{r,echo=FALSE,fig.width= 8, fig.height= 4}
+true_value_gene <- 0
+file_name <- ".minp08.mingene1.parameters.RDS"
+plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
+```
+
+## Enrichment=1 (prior_gene = 0.0034, sigma_gene = 0.0185)
+gene prior = 3.4e-3, snp prior = 3.4e-3, sigma_gene = 0.0185, sigma_snp = 0.0155, 7395 genes and 500000 SNPs
+```{r,echo=FALSE,fig.width= 8, fig.height= 4}
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue_test/"
+runtag = "one_tissue"
+simutags <- paste(6, 1:10, sep = "-")
+thins <- c(1)
+group_prior_var_structures <- c("shared_all","shared_type")
+null_methods <- c("ctwas","susie")
+```
+
+### All regions
+```{r,echo=FALSE,fig.width= 8, fig.height= 4}
+true_value_gene <- 0
+file_name <- ".minp0.mingene0.parameters.RDS"
+plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
+```
+
+### Regions with min_p_single=0.8
+```{r,echo=FALSE,fig.width= 8, fig.height= 4}
+true_value_gene <- 0
+file_name <- ".minp08.mingene1.parameters.RDS"
+plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
+```
+
+## Enrichment=1 (prior_gene = 0.0034, sigma_gene = 0.0200)
+gene prior = 3.4e-3, snp prior = 3.4e-3, sigma_gene = 0.0200, sigma_snp = 0.0155, 7395 genes and 500000 SNPs
+```{r,echo=FALSE,fig.width= 8, fig.height= 4}
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue_test/"
+runtag = "one_tissue"
+simutags <- paste(7, 1:10, sep = "-")
+thins <- c(1)
+group_prior_var_structures <- c("shared_all","shared_type")
+null_methods <- c("ctwas","susie")
+```
+
+### All regions
+```{r,echo=FALSE,fig.width= 8, fig.height= 4}
+true_value_gene <- 0
+file_name <- ".minp0.mingene0.parameters.RDS"
+plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
+```
+
+### Regions with min_p_single=0.8
+```{r,echo=FALSE,fig.width= 8, fig.height= 4}
+true_value_gene <- 0
+file_name <- ".minp08.mingene1.parameters.RDS"
+plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
+```
+
+## Enrichment=1 (prior_gene = 0.0034, sigma_gene = 0.0215)
+gene prior = 3.4e-3, snp prior = 3.4e-3, sigma_gene = 0.0215, sigma_snp = 0.0155, 7395 genes and 500000 SNPs
+```{r,echo=FALSE,fig.width= 8, fig.height= 4}
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue_test/"
+runtag = "one_tissue"
+simutags <- paste(8, 1:10, sep = "-")
+thins <- c(1)
+group_prior_var_structures <- c("shared_all","shared_type")
+null_methods <- c("ctwas","susie")
+```
+
+### All regions
+```{r,echo=FALSE,fig.width= 8, fig.height= 4}
+true_value_gene <- 0
+file_name <- ".minp0.mingene0.parameters.RDS"
+plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
+```
+
+### Regions with min_p_single=0.8
+```{r,echo=FALSE,fig.width= 8, fig.height= 4}
+true_value_gene <- 0
+file_name <- ".minp08.mingene1.parameters.RDS"
 plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
 ```
